Fixed scrollbar not being movable with mouse

--- a/src/css/page.scss
+++ b/src/css/page.scss
@@ -35,7 +35,7 @@ html, body {
 
 
 ::-webkit-scrollbar {
-    width: 4px;
+    width: 10px;
 }
 
 /* Track */
